[gd_scene load_steps=3 format=3 uid="uid://bdgg8jxp6dr2l"]

[ext_resource type="Script" uid="uid://3iaquu2t8hp7" path="res://scenes/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://ckphyjdch1ip8" path="res://scenes/player.tscn" id="1_o5qli"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="Player" parent="." instance=ExtResource("1_o5qli")]

[node name="MobTimerUpper" type="Timer" parent="."]
wait_time = 0.5

[node name="MobTimerLower" type="Timer" parent="."]
wait_time = 0.5

[node name="OxygenTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="StartPosition" type="Marker2D" parent="."]
